# programlama-lab-1-geometri-uygulamasi

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/geometri/: Daire.hpp  DogruParcasi.hpp  Nokta.hpp  Ucgen.hpp
src/: Daire.cpp  DogruParcasi.cpp  Nokta.cpp  Ucgen.cpp  main.cpp
tests/: test_geometri.cpp
